--- a/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/_ViewImports.cshtml
+++ b/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LanchesMac_ProjMVC_Gauss
 @using LanchesMac_ProjMVC_Gauss.Models
+@using LanchesMac_ProjMVC_Gauss.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
