--- a/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/CarrinhoCompra/Index.cshtml
+++ b/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/CarrinhoCompra/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
 
-        <img src="~/images/carrinho-de-compras.png" />
+        <img src="~/images/carrinho-de-compras.png" style="width:50px" />
 
         <div>
             <h4>Seu carrinho de compras: </h4>
