--- a/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/_ViewImports.cshtml
+++ b/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using LanchesMac_ProjMVC_Gauss.Models
 @using LanchesMac_ProjMVC_Gauss.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper LanchesMac_ProjMVC_Gauss.TagHelpers.*, LanchesMac_ProjMVC_Gauss
