tag helper email

--- a/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/Contato/Index.cshtml
+++ b/LanchesMac_ProjMVC_Gauss/LanchesMac_ProjMVC_Gauss/Views/Contato/Index.cshtml
@@ -1,4 +1,24 @@
 ﻿<div class="container">
-    <img src="~/images/" alt="" />
+    <img src="~/images/faleconosco.png" alt="Fale conosco" style="width:30px;" />
+    <div class="jumbotron">
+        <h3>Queremos ouvir o que você tem a dizer</h3>
+        <p>Se você tiver alguma dúvida ou sugestão fale conosco</p>
+        <p>
+            <span>
+                <img src="~/images/envelope.png" style="width:28px;" />
+            </span>
+            <h5><email endereco="pedro.contato24@gmail.com" conteudo="Enviar um e-mail"></email></h5>
+            <br />
+            <span>
+                <img src="~/images/whatsapp.png" style="width:28px;" />
+            </span>
+            <h5>(11) 99999-9999</h5>
+            <br />
+            <span>
+                <img src="~/images/home.png" style="width:28px;" />
+            </span>
+            <h5>Av. Atibaia 230 - 12965-320 - Atibaia SP</h5>
+        </p>
+    </div>
 </div>
     
